Changes for 1.7.0.5
* Fixed bug where chanceIncrementOnFailure and chanceDecrementOnSuccess were not allowing any number of zero or less for chance. (veqryn)

* Fixed error where games with a round offset where doubling what round the game started on each time it was saved via the history panel. (veqryn)

* Creating a headless chat service, so that server can be created in a headless environment and still chat. (veqryn)

* Fixed bug causing fatal errors in client-server games when client owned very last step/delegate of game (only applied to some grid based games). (veqryn)

* Adding a log file for the headless server located at /log/headless-game-server-<servername>-log<#>.txt, to keep track of events. (veqryn)

* Adding many more additional commands to headless game server console, including show connections, ban player, save game, and stop game. (veqryn)

* Stopped headless game server from being able to load any savegame for a map to which it does not have the required map files for. (veqryn)

* Possible fix another possible hang/freeze point causing a Could Not Block Delegate Execution error. (veqryn)

* Fixed headless game server's connect to lobby so that resetting the connection does not erase info about the game. (veqryn)

* Possible fixes two possible hang/freeze points in Server Game, one caused by a bogus ClassCastException in ClientGame, the other by a bogus NullPointerError/IllegalArgumentError in RemoteName from PlayerDelegateBridge. (veqryn)

* Making sure sound system never loads sound clips for headless game server. (veqryn)

* Added a console to automated headless game server host, which allows commands such as 'help', 'status', 'memory', 'threads', and 'quit'. (veqryn)

* Created a headless UIContext for use with headless game server, so that it may run on a linux platform that has no configured graphics environment. (veqryn)


Changes for 1.7.0.3